add API GET department list
